# ai-house-plan

./: .gitignore  README.md
mrv-ai-preview-back/: DOCUMENTACAO_BACKEND.md  README.md  auth.db  init_db.py  main.py  pyproject.toml  test_api.py
mrv-ai-preview-back/utils/api/: main.py
mrv-ai-preview-back/utils/api/routes/: architect.py  image_generation.py  ocr.py
mrv-ai-preview-back/utils/auth/: middleware.py  models.py  routes.py  utils.py
mrv-ai-preview-back/utils/core/ai/: gemini_service.py  interpreter_plan.py  schemas.py
mrv-ai-preview-back/utils/core/architect/: type_analyzer.py
mrv-ai-preview-back/utils/core/image_generation/: image_service.py  prompt_bio.py  prompt_class.py  prompt_eco.py  prompt_essential.py  prompts.py
mrv-ai-preview-back/utils/core/ocr/: ocr_service.py
mrv-ai-preview-back/utils/database/: architect_models.py  architect_service.py  db_service.py  image_models.py  image_service.py
mrv-ai-preview-back/utils/shared/: config.py  json_utils.py
mrv-ai-preview-back/utils/tests/: test_api_key.py
mrv-ai-preview-back/workflow/: .env.example  auth.db  init_db.py  llm_factory.py  pyproject.toml
mrv-ai-preview-back/workflow/tests/: test_gemini.py
mrv-ai-preview-back/workflow/utils/: auth.db  db.py  generate_images.py  interpreter_plan.py  llm_factory.py  llm_factory_hugging.py  main_api.py  ocr_plan.py  ocr_reader.py  pipeline_generate_images.py  prompt_factory.py  start_server.py  test_gemini_api.py  test_imports.py
mrv-ai-preview-back/workflow/workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+53 files in other folders)
